@@ -1,5 +1,10 @@
 2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
+	* src/hildon-color-chooser-dialog.c:
+	* src/hildon-color-chooser.c: Adding some documentation.
+
+2007-01-31  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
 	* configure.ac:
 	* pkgconfig/hildon.pc.in:
 	* src/hildon-seekbar.c: Xan's fixes for new gtk compilation.
